fixed hamburguer menu on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,4 +22,5 @@
 :root {
   --topnav-height: 76px;
   --topnav-handbook-mobile-height: 116px;
+  --topnav-shellby-height: 26px;
 }
